@@ -1,3 +1,8 @@
+2002-09-17  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbgobject.c (rbgobj_define_property_accessors): optimize a bit
+	  by accumulating source string and call module_eval at once.
+
 2002-09-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
 	* src/rbgobject.c (rbgobj_define_property_accessors):
